// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Position should change position based on window 1`] = `
<div
  className="Position-dropdown-0-1-1 Position-dropdownUp-0-1-5 undefined"
  data-qa="dropdown-position"
>
  <div>
    Children
  </div>
</div>
`;

exports[`Position should change position when spaceLeftIsGreater 1`] = `
<div
  className="Position-dropdown-0-1-1 Position-dropdownLeft-0-1-3 Position-dropdownUp-0-1-5 undefined"
  data-qa="dropdown-position"
>
  <div>
    Children
  </div>
</div>
`;
